--- a/tailwond.html
+++ b/tailwond.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="bg-blue-500">Blue background new</div>
+    <div class="bg-blue-500">Blue background new dd</div>
     <div class="bg-red-300/50">Red background with 50% opacity</div>
     <div class="bg-gradient-to-r from-green-400 to-blue-500">
       Gradient from green to blue
